--- a/SocketTest/SocketTest.csproj
+++ b/SocketTest/SocketTest.csproj
@@ -43,7 +43,7 @@
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
-    <OutputPath>D:\Program Files\SocketTest\</OutputPath>
+    <OutputPath>..\..\..\SocketTest\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <Optimize>true</Optimize>
     <DebugType>pdbonly</DebugType>
